...
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="#8a0e29"
    android:gravity="center_vertical|end"
    >
    <TextView
        android:id="@+id/goHomeTextView_AppForm"
        android:layout_marginEnd="7dp"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:text="Home"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/go_home_button"
        />

</LinearLayout>
...
    <LinearLayout
        android:layout_below="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical"
        android:id="@+id/form_ll"
        >
        <RadioGroup
            android:id="@+id/leave_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            >
            <ToggleButton
                android:id="@+id/ML"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_cstyle"
                android:textOn="Medical Leave"
                android:textOff="Medical Leave"

                android:textColor="@color/togglecolor"
                android:layout_weight="0.5"
                />
            <ToggleButton
                android:id="@+id/OD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textOff="Duty Leave"
                android:textOn="Duty Leave"
                android:textColor="@color/togglecolor"
                android:background="@drawable/toggle_cstyle"
                />
        </RadioGroup>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <TextView
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Name"
            android:textSize="18sp"
            android:gravity="center_vertical"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regnum_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:gravity="center">

        <TextView
            android:id="@+id/regnum_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Register Number"
            android:textSize="18sp"
            android:gravity="center_vertical"/>
    </com.google.android.material.textfield.TextInputLayout>
...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/from_dateTI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/from_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="From Date"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/to_dateTI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/to_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="To Date"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


        <EditText
            android:id="@+id/file_name_EditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:hint="Enter file name" />

        <Button
            android:id="@+id/select_certificate_btn"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/shape_loginb"
            android:fontFamily="sans-serif-thin"
            android:text="Select"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/upload_certificate_btn"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_loginb"
            android:fontFamily="sans-serif-thin"
            android:text="Upload"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progress_bar"
...
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp" />
    </LinearLayout>

    <Button
        android:id="@+id/apply_Btn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:background="@drawable/shape_loginb"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:text="Apply"/>

</LinearLayout>

