...
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Student.StudentDashboard">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/studentToolBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#8a0e29"
        >

    </androidx.appcompat.widget.Toolbar>
...
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                >

                <ImageView
                    android:id="@+id/student_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/user"
                    />
...
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical"
                    android:layout_below="@+id/student_image"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/student_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:id="@+id/student_regnum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"

                        />

                    <TextView
                        android:id="@+id/student_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:gravity="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:id="@+id/student_phNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal"
                        />
...
