...
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#8a0e29"
        android:gravity="center_vertical|end"
        >
        <TextView
            android:id="@+id/goHomeTextView_ShowMyOds"
            android:layout_marginEnd="7dp"
            android:layout_width="75dp"
            android:layout_height="35dp"
            android:text="Home"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/go_home_button"
            />

    </LinearLayout>
    <Button
        android:id="@+id/searchOdsBtn_Student"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="Search"
        android:fontFamily="sans-serif-thin"
        android:textSize="14sp"/>


    <ListView
        android:id="@+id/showOdsListView_Student"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>
